Minor change to Open Booking web.config

--- a/Sample Apps/Open Booking/Web.config
+++ b/Sample Apps/Open Booking/Web.config
@@ -6,7 +6,7 @@
   <appSettings>
     <!-- In order to run this sample, please input your consumer key and consumer secret.  -->
 	<add key="consumerKey" value="your consumer key"/>
-	<add key="consumerKey" value="your consumer secret"/>
+	<add key="consumerSecret" value="your consumer secret"/>
 
 	<!-- Specify the URL of the local web server where the sample app is being hosted (IIS or the VS Development Web Server)  -->
 	<add key="OAuthWebRedirect" value="http://localhost:49618"/>
